[package]
name = "rustcxx_common"
version = "0.1.0"
authors = ["Paul Liétar <paul@lietar.net>"]

description = "Using C++ from Rust made easy"
repository = "https://github.com/google/rustcxx"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["c", "c++", "cxx", "cpp", "ffi"]

[lib]
path = "lib.rs"
